<resources>
    <string name="app_name">MAD</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="submit">Submit</string>
    <string name="logoipsum">Logoipsum</string>
    <string name="image_description">google_logo</string>
    <string name="google_text">google_text</string>
    <string name="google_logo">google_logo</string>
    <string name="kaku18is_cmrit_ac_in">kaku18is@cmrit.ac.in</string>
    <string name="kanhaya_kumar_yadav">Kanhaya kumar Yadav</string>
    <string name="software_developer">Software Developer</string>
    <string name="bangalore_560075">Bangalore 560075</string>
    <string name="_91_8073960134">+91 8073960134</string>
    <string name="email_id">rakeshseervi.workspace@gmail.com</string>
    <string name="website">rakeshseervi.github.io</string>
    <string name="phone_number">7019271367</string>
    <string name="name">Rakesh Seervi</string>
    <string name="company_logo">company_logo</string>
    <string name="addtocontactsbtn">addToContactsBtn</string>
    <string name="dialbtn">dialBtn</string>
    <string name="backspacebtn">backspaceBtn</string>
    <string name="asterisk">*</string>
    <string name="_0">0</string>
    <string name="hash">#</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="username">username</string>
    <string name="card_label">Card</string>
    <string name="dialer">dialer</string>
    <string name="auth">Auth</string>
    <string name="text_to_speech">Text To Speech</string>
    <string name="speak">Speak</string>
    <string name="your_text_here">your text here</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="play">play</string>
    <string name="carousel">Carousel</string>
    <string name="counter">Counter</string>
    <string name="carousel_image">carousel_image</string>
    <string name="parser">parser</string>
    <string name="json">JSON</string>
    <string name="xml">XML</string>
</resources>