<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/first_name"
            android:autofillHints="@string/first_name"
            android:inputType="text"
            android:background="@drawable/edit_text_border"
            android:padding="8dp"/>

        <Space
            android:layout_width="8dp"
            android:layout_height="8dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/last_name"
            android:autofillHints="@string/last_name"
            android:inputType="text"
            android:background="@drawable/edit_text_border"
            android:padding="8dp"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"/>

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/address"
        android:autofillHints="@string/address"
        android:inputType="textMultiLine"
        android:minLines="2"
        android:maxLines="3"
        android:background="@drawable/edit_text_border"
        android:padding="8dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/country"
            android:autofillHints="@string/country"
            android:inputType="text"
            android:background="@drawable/edit_text_border"
            android:padding="8dp"/>

        <Space
            android:layout_width="8dp"
            android:layout_height="8dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="48dp"
            android:text="@string/submit" />
    </LinearLayout>

</LinearLayout>