<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialer">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addToContactsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:onClick="onClickListener"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/dialBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_baseline_person_add_32"
            android:contentDescription="@string/addtocontactsbtn" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/dialBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:onClick="onClickListener"
            android:contentDescription="@string/dialbtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/backspaceBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/addToContactsBtn"
            app:srcCompat="@drawable/ic_baseline_call_32" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/backspaceBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:onClick="onClickListener"
            android:contentDescription="@string/backspacebtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dialBtn"
            app:srcCompat="@drawable/ic_baseline_backspace_32" />

        <Button
            android:id="@+id/asteriskBtn"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickListener"
            android:tag="@string/asterisk"
            android:text="@string/asterisk"
            app:layout_constraintBaseline_toBaselineOf="@+id/zero_btn"
            app:layout_constraintEnd_toStartOf="@+id/zero_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/zero_btn"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/_0"
            android:tag="@string/_0"
            android:onClick="onClickListener"
            app:layout_constraintBottom_toTopOf="@+id/dialBtn"
            app:layout_constraintEnd_toStartOf="@+id/hashBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/asteriskBtn" />

        <Button
            android:id="@+id/hashBtn"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/hash"
            android:tag="@string/hash"
            android:onClick="onClickListener"
            app:layout_constraintBottom_toTopOf="@+id/backspaceBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/zero_btn" />

        <Button
            android:id="@+id/one_btn"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/_1"
            android:tag="@string/_1"
            android:onClick="onClickListener"
            app:layout_constraintBottom_toTopOf="@+id/asteriskBtn"
            app:layout_constraintEnd_toStartOf="@+id/two_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/two_btn"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/_2"
            android:tag="@string/_2"
            android:onClick="onClickListener"
            app:layout_constraintBottom_toTopOf="@+id/zero_btn"
            app:layout_constraintEnd_toStartOf="@+id/three_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/one_btn" />

        <Button
            android:id="@+id/three_btn"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/_3"
            android:tag="@string/_3"
            android:onClick="onClickListener"
            app:layout_constraintBottom_toTopOf="@+id/hashBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/two_btn" />

        <Button
            android:id="@+id/four_btn"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/_4"
            android:tag="@string/_4"
            android:onClick="onClickListener"
            app:layout_constraintBottom_toTopOf="@+id/one_btn"
            app:layout_constraintEnd_toStartOf="@+id/five_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/five_btn"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/_5"
            android:tag="@string/_5"
            android:onClick="onClickListener"
            app:layout_constraintBottom_toTopOf="@+id/two_btn"
            app:layout_constraintEnd_toStartOf="@+id/six_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/four_btn" />

        <Button
            android:id="@+id/six_btn"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/_6"
            android:tag="@string/_6"
            android:onClick="onClickListener"
            app:layout_constraintBottom_toTopOf="@+id/three_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/five_btn" />

        <Button
            android:id="@+id/seven_btn"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/_7"
            android:tag="@string/_7"
            android:onClick="onClickListener"
            app:layout_constraintBottom_toTopOf="@+id/four_btn"
            app:layout_constraintEnd_toStartOf="@+id/eight_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/eight_btn"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/_8"
            android:tag="@string/_8"
            android:onClick="onClickListener"
            app:layout_constraintBottom_toTopOf="@+id/five_btn"
            app:layout_constraintEnd_toStartOf="@+id/nine_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/seven_btn" />

        <Button
            android:id="@+id/nine_btn"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/_9"
            android:tag="@string/_9"
            android:onClick="onClickListener"
            app:layout_constraintBottom_toTopOf="@+id/six_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/eight_btn" />

        <View
            android:id="@+id/divider3"
            android:layout_width="379dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/teal_200"
            app:layout_constraintBottom_toTopOf="@+id/eight_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/phoneNumberView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintBottom_toTopOf="@+id/divider3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="701 927 1367" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>